# Lango

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  agents.md  conftest.py  partitions_s3_32mb.csv  sdkconfig.defaults.esp32s3
.claude/: settings.local.json
docs/: PICO_AGENT.md  claude-esp32-collaboration.md
littlefs_data/: HEARTBEAT.md  cron.json
main/: CMakeLists.txt  idf_component.yml  langoustine.c  langoustine_config.h  langoustine_secrets.h.example  mimi_config.h
main/agent/: agent_loop.c  agent_loop.h  context_builder.c  context_builder.h
main/audio/: audio_pipeline.c  audio_pipeline.h  downsample.h  i2s_audio.c  i2s_audio.h  microphone.c  microphone.h  stt_client.c  stt_client.h  tts_client.c  tts_client.h  uac_microphone.c  wake_word.c  wake_word.h
main/bus/: message_bus.c  message_bus.h
main/camera/: uvc_camera.c  uvc_camera.h
main/certs/: server_cert.pem  server_key.pem
main/cli/: serial_cli.c
main/config/: services_config.c  services_config.h  services_parser.h
main/cron/: cron_service.c  cron_service.h
main/diag/: log_buffer.c  log_buffer.h
main/display/: oled_display.c  oled_display.h  ssd1306.c  ssd1306.h
main/gateway/: ws_server.c  ws_server.h
main/heartbeat/: heartbeat.c
main/led/: led_indicator.c  led_indicator.h
main/llm/: http_session.c  http_session.h  llm_proxy.c  llm_proxy.h
main/memory/: memory_store.c  psram_alloc.c  psram_alloc.h  session_mgr.c  session_mgr.h
main/monitor/: ambient_monitor.c  ambient_monitor.h
main/ota/: ota_manager.c  ota_manager.h
main/proxy/: http_proxy.c
main/rules/: rule_engine.c
main/skills/: skill_loader.c
main/telegram/: telegram_bot.c  telegram_bot.h
main/tools/: tool_capture_image.c  tool_capture_image.h  tool_cron.c  tool_device_restart.c  tool_device_temp.c  tool_device_temp.h  tool_files.c  tool_frame_tv.c  tool_frame_tv.h  tool_get_time.c  tool_ha.c  tool_http.c  tool_klipper.c  tool_memory.c  tool_memory_read.c  tool_noaa_buoy.c  tool_registry.c  tool_rss.c  tool_say.c  tool_search_files.c  tool_session.c  tool_set_volume.c  tool_set_volume.h  tool_smtp.c  tool_system_info.c  tool_weather.c  tool_weather.h  tool_web_search.c  tool_web_search.h
main/wifi/: wifi_manager.c  wifi_onboard.c  wifi_onboard.h  wifi_recovery.c
memory/: arm_stock_today.md  brief_data.md
(+186 files in other folders)
